--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,8 @@ a:hover {
   font: 300 13px 'Open sans',sans-serif;
 }
 
+/* header */
+
 .top-row {
   background: #4cb1ca;
   color: #fff;
@@ -90,7 +92,16 @@ a:hover {
 
 .logo  {
   float: left;
-  padding: 41px 0 37px 0;
+}
+
+.menu-row {
+	padding: 38px 0;
+	min-height: 30px;
+	line-height: 30px;
+}
+.menu-row a {
+	color: #656565;
+	font-size: 17px;
 }
 
 .main-nav {
@@ -100,7 +111,6 @@ a:hover {
 .main-nav-menu {
   float: left;
   margin: 0;
-  padding: 44px 114px 0 50px;
 }
 
 .main-nav li {
@@ -114,9 +124,47 @@ a:hover {
   font: 700 14px 'Open sans',sans-serif;
 }
 
-.search {
-  float: right;
+.menu-right {
+	float: right;
 }
+
+.menu-right .btn {
+	margin: 0 4px;
+	float: left;
+	text-align: center;
+	font-size: 20px;
+	color: #fff;
+	width: 32px;
+	min-height: 32px;
+	background: #7db122;
+	border-radius: 16px;
+}
+
+.menu-right .btn:hover {
+	opacity: 0.7;
+}
+
+.menu-right b {
+	font-size: 15px;
+	margin-left: 9px;
+}
+
+.search {
+	float: left;
+	border: 1px solid #c6c6c6;
+	padding: 0 5px;
+	margin-right: 12px;
+}
+
+.search input {
+	border: none;
+	outline: none;
+}
+
+.menu-right p {
+	margin: 0;
+}
+
 
 /*slide-show*/
 
@@ -386,31 +434,22 @@ padding: 0;
 	-webkit-transform: rotate(-45deg);
 	top: 19px; left: -28px;
 }
-.aside {
-	display: block;
-	float: right;
-	width: 25%;
-	position: absolute;
-	top: 0;
-	right: 0;
-}
 
 /* side-slider */
 
 .side-bar {
   float: right;
-  width: 20%;
+  width: 23%;
 }
 
-
 .side-slider {
-  float: right;
   width: 233px;
   height: 485px;
   background: #fff;
   position: relative;
   box-shadow: 0 0 5px rgba(122,122,122,0.5);
   overflow: hidden;
+  border-top: 4px solid #4cb1ca;
 }
 
 .side-slide img {
@@ -444,7 +483,6 @@ padding: 0;
   padding: 0;
 }
 
-
 .side-slider li button:hover {
 	background: #4cb1ca;
 }
@@ -452,6 +490,35 @@ padding: 0;
 .side-slider .slick-active button  {
   background: #4cb1ca;
 }
+
+.newslatter-block {
+  box-shadow: 0 0 5px rgba(122,122,122,0.5);
+  text-align: center;
+  border-top: 4px solid #4cb1ca;
+  padding: 14px;
+}
+
+.newslatter-block p {
+ border-width: 80%;
+ border-bottom: 1px solid #ededed;
+ padding-bottom: 5px;
+ margin-bottom: 14px;
+}
+
+.newslatter-block input {
+	padding: 5px 6px;
+	margin: -2px;
+}
+
+.newslatter-block input[type=submit] {
+  color: #fff;
+  background:#7eb123;
+  border:0 none;
+  cursor:pointer;
+  margin: 18px;
+  padding: 15px 25px;
+}
+
 
 /*footer*/
 
@@ -508,6 +575,15 @@ padding: 0;
 	margin: 20px 0 0;
 }
 
+.footer-info-link a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer-info-link a:hover {
+	opacity: 0.7;
+}
+
 .contact-tab ul {
 	list-style: none;
 	padding: 0;
@@ -541,6 +617,87 @@ padding: 0;
 	font-size: 20px;
 }
 
+
+
+/*contact us tab*/
+/*footer/social buttons*/
+
+.contact-tab ul {
+	list-style: none;
+	padding: 0;
+}
+
+.alt-content {
+	margin: 20px 0 0;
+}
+
+.contact-tab {
+	margin-right: 1.7%;
+	width: 23%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+/*.contact-tab img {
+	width: 100%;
+	height: auto;
+}*/
+
+.contact-tab ul {
+	list-style: none;
+	padding: 0;
+}
+
+.contact-tab li:before {
+	margin-right: 10px;
+	content: '\f105';
+	font-family: 'FontAwesome';
+}
+
+.contact-tab:last-child li:before {
+	margin: 0;
+	content: '';
+}
+
+.contact-tab i {
+	margin-right: 7px;
+	color: #39a0b9;
+	text-align: center;
+	line-height: 43px;
+	font-size: 22px;
+	background: #fff;
+	width: 43px;
+	height: 43px;
+	border-radius: 50%;
+}
+
+.social-btn a {
+  line-height: 0;
+  font-size: 0;
+}
+
+.social-btn {
+	float: right;
+	border-top: 1px solid #4cb1ca;
+	margin-top: 18px;
+}
+
+.social-btn li {
+	display: inline-block;
+}
+
+.contact-tab i:hover {
+	opacity: 0.6;
+}
+
+.contact-tab .text-block {
+	top: 0;
+	text-transform: uppercase;
+	font-size: 20px;
+}
+
+/*footer/ end row*/
+
 .end-row {
 	background: #0b4b5a;
 	height: 20px;
@@ -573,10 +730,6 @@ padding: 0;
 	display: inline-block;
 }
 
-
-
-
-
 /*responsive*/
 #header .container {
   position: relative;
@@ -587,67 +740,144 @@ padding: 0;
 }
 
 @media screen and (max-width: 1366px) {
-  .slick-arrow.slick-prev {
-    margin: 0;
-    left: 3%;
-  }
-  .slick-arrow.slick-next {
-    margin: 0;
-    right: 3%;
-  }
-  .slider .text-block {
-    margin: 0;
-    left: 12%;
-  }
+	.slick-arrow.slick-prev {
+		margin: 0;
+		left: 3%;
+	}
+	.slick-arrow.slick-next {
+		margin: 0;
+		right: 3%;
+	}
+	.text-block {
+		left: 60%;
+	}
 }
+
 @media screen and (max-width: 980px) {
-  .container {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .mobile-nav {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 480px;
-    background: #ccc;
-    padding: 20px;
-    z-index: 999;
-    margin-top: 103px;
-    transform: translateX(100%);
-    transition: all .3s ease-in-out;
-  }
-  .open .mobile-nav {
-    transform: translateX(0);
-  }
-
-  .btn-burger {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 50px
-  }
-  .main-nav {
-    padding: 15px 0;
-  }
-  .main-nav,
-  .main-nav-menu,
-  .main-nav-menu ul,
-  .main-nav-menu li
-  .main-nav-menu a {
-    float: none;
-    display: block;
-  }
-  .search{
-    display: block;
-    width: 98%;
-  }
-  .box {
-    min-height: 238px;
-  }
-  .slick-arrow {
-    width: 44px;
-    height: 44px;
-  }
-
+	.container {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+	.mobile-nav {
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		right: 0;
+		width: 380px;
+		background: #fff;
+		padding: 20px;
+		z-index: 99;
+		margin: 103px 0 0;
+		transform: translateX(100%);
+		transition: all .25s ease-in-out;
+		opacity: 0;
+	}
+	.open .mobile-nav {
+		transform: translateX(0);
+		opacity: .9;
+	}
+	.btn-burger {
+		display: block;
+		position: absolute;
+		top: 0;
+		right: 50px;
+	}
+	.menu-row {
+		padding: 15px 0;
+	}
+	.search,
+	.menu-left,
+	.menu-right,
+	.main-vav {
+		float: none;
+	}
+	.main-nav li a,
+	.main-nav li {
+		display: block;
+	}
+	.menu-right .btn {
+		display: inline-block;
+		vertical-align: middle;
+	}
+	.slider .text-block {
+		left: 60%;
+	}
+	.slick-arrow {
+		width: 44px;
+		height: 44px;
+	}
+	.slick-arrow.slick-next:after {
+		font-size: 37px;
+		line-height: 43px;
+	}
+	.slick-arrow.slick-prev:after {
+		font-size: 37px;
+		line-height: 43px;
+	}
+	.slick-arrow.slick-prev {
+		left: 3%;
+	}
+}
+@media screen and (max-width: 768px) {
+	.container {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+	#header {
+		background: #4cb1ca;
+	}
+	.slick-track {
+	height: auto;
+	}
+	.end-row-left {
+		display: none;
+	}
+	.bottom-nav {
+		width: 100%;
+		text-align: center;
+	}
+	.settings,
+	.top-nav {
+	float: none;
+	}
+	.mobile-header {
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		right: 0;
+		width: 380px;
+		background: #fff;
+		padding: 20px;
+		z-index: 9999;
+		margin: 60px 0 0;
+		transform: translateX(100%);
+		transition: all .25s ease-in-out;
+		opacity: 0;
+	}
+	.open .mobile-header {
+		transform: translateX(0);
+		opacity: .9;
+	}
+	.social-tab:nth-child(-n+2) {
+		display: none;
+	}
+	.social-tab {
+		width: 48%;
+	}
+	.slick-arrow {
+		z-index: -1;
+	}
+	.slider .text-block {
+		left: 70%;
+	}
+	.products-area {
+		width: 100%;
+	}
+	.aside {
+		width: 100%;
+	}
+	.ad-box {
+		width: 24%;
+		display: inline-block;
+	}
 }
