--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ a:hover {
 }
 
 .top-nav {
-    float: right;
+  float: right;
 }
 
 
@@ -99,6 +99,11 @@ a:hover {
 	min-height: 30px;
 	line-height: 30px;
 }
+
+.mobile-header {
+	display: none;
+}
+
 .menu-row a {
 	color: #656565;
 	font-size: 17px;
@@ -295,9 +300,6 @@ a:hover {
   width: 75%;
 }
 
-.prod-list h {
-  display: block;
-}
 
 .prod-list {
 margin: 0;
@@ -334,10 +336,6 @@ padding: 0;
 .prod-list .desc {
   padding: 4px 55px 4px 4px;
   position: relative;
-}
-
-.prod-list .text {
-
 }
 
 .prod-list p {
@@ -396,7 +394,7 @@ padding: 0;
 	right: -28px;
 }
 .ribbon span::before {
-	content: "";
+	content: '';
 	position: absolute; left: 0px; top: 100%;
 	z-index: -1;
 	border-left: 3px solid #2ea0bc;
@@ -523,13 +521,14 @@ padding: 0;
 /*footer*/
 
 .footer-body	{
-	height: 500px;
+	min-height: 500px;
+  display: block;
 }
 
 .delivery-row {
 	color: #fff;
 	background: #4cb1ca;
-	height: 105px;
+	min-height: 105px;
 	position: relative;
 }
 
@@ -546,8 +545,8 @@ padding: 0;
 	font-size: 30px;
 	float: left;
 	color: #39a0b9;
-	width: 50px;
-	height: 50px;
+	min-width: 50px;
+	min-height: 50px;
 	background: #fff;
 	border-radius: 25px;
 }
@@ -559,7 +558,6 @@ padding: 0;
 .contact-row {
 	color: #fff;
 	background: #39a0b9;
-	height: 335px;
 	position: relative;
 	padding: 45px 0 0;
 }
@@ -602,8 +600,8 @@ padding: 0;
 	line-height: 43px;
 	font-size: 22px;
 	background: #fff;
-	width: 43px;
-	height: 43px;
+	min-width: 43px;
+	min-height: 43px;
 	border-radius: 50%;
 }
 
@@ -638,10 +636,6 @@ padding: 0;
 	vertical-align: top;
 }
 
-/*.contact-tab img {
-	width: 100%;
-	height: auto;
-}*/
 
 .contact-tab ul {
 	list-style: none;
@@ -700,7 +694,7 @@ padding: 0;
 
 .end-row {
 	background: #0b4b5a;
-	height: 20px;
+	min-height: 20px;
 	position: relative;
 	color: #fff;
 	padding: 20px 0;
@@ -752,11 +746,13 @@ padding: 0;
 		left: 60%;
 	}
 }
-
 @media screen and (max-width: 980px) {
 	.container {
 		padding-left: 20px;
 		padding-right: 20px;
+	}
+	.mobile-header {
+		display: block;
 	}
 	.mobile-nav {
 		position: fixed;
@@ -764,13 +760,19 @@ padding: 0;
 		bottom: 0;
 		right: 0;
 		width: 380px;
-		background: #fff;
+		background: #4cb1ca;
 		padding: 20px;
-		z-index: 99;
-		margin: 103px 0 0;
+		z-index: 9999;
+		margin: 109px 0 0;
 		transform: translateX(100%);
 		transition: all .25s ease-in-out;
 		opacity: 0;
+	}
+	.mobile-nav .search input {
+		background: #4cb1ca;
+	}
+	.mobile-nav .top-nav li:after {
+		margin: 0;
 	}
 	.open .mobile-nav {
 		transform: translateX(0);
@@ -785,15 +787,11 @@ padding: 0;
 	.menu-row {
 		padding: 15px 0;
 	}
-	.search,
-	.menu-left,
-	.menu-right,
-	.main-vav {
-		float: none;
-	}
 	.main-nav li a,
 	.main-nav li {
 		display: block;
+		margin: 10px;
+    color: #fff;
 	}
 	.menu-right .btn {
 		display: inline-block;
@@ -817,6 +815,30 @@ padding: 0;
 	.slick-arrow.slick-prev {
 		left: 3%;
 	}
+  .top-nav {
+    display: none;
+  }
+  .settings{
+    display: none;
+  }
+  .facebook-tab {
+    display: none;
+  }
+  .twetter-tab {
+    display: none;
+  }
+  .contact-row {
+    text-align: center;
+  }
+  .contact-row li {
+    text-align: left;
+  }
+  .prod-list li {
+    margin: 0 10px 10px 0;
+  }
+  .side-bar {
+    width: 25%;
+  }
 }
 @media screen and (max-width: 768px) {
 	.container {
@@ -827,7 +849,7 @@ padding: 0;
 		background: #4cb1ca;
 	}
 	.slick-track {
-	height: auto;
+	  height: auto;
 	}
 	.end-row-left {
 		display: none;
@@ -838,30 +860,36 @@ padding: 0;
 	}
 	.settings,
 	.top-nav {
-	float: none;
+	  float: none;
+    display: block;
 	}
-	.mobile-header {
-		position: fixed;
-		top: 0;
-		bottom: 0;
-		right: 0;
-		width: 380px;
-		background: #fff;
-		padding: 20px;
-		z-index: 9999;
-		margin: 60px 0 0;
-		transform: translateX(100%);
-		transition: all .25s ease-in-out;
-		opacity: 0;
-	}
-	.open .mobile-header {
-		transform: translateX(0);
-		opacity: .9;
-	}
-	.social-tab:nth-child(-n+2) {
+  .settings label {
+    color: #fff;
+  }
+  .settings {
+    text-align: center;
+    padding: 0;
+  }
+  .top-nav {
+    margin: 0;
+    padding: 0;
+  }
+  .top-nav a {
+    padding: 0 6px;
+  }
+	.top-row {
 		display: none;
 	}
-	.social-tab {
+	.menu-row a {
+		color: #fff;
+	}
+  .prod-list li:nth-child(3n) {
+    margin: 0 26px 25px 0;
+  }
+	.contacb:nth-child(-n+2) {
+		display: none;
+	}
+	.contac-tab {
 		width: 48%;
 	}
 	.slick-arrow {
@@ -870,14 +898,34 @@ padding: 0;
 	.slider .text-block {
 		left: 70%;
 	}
-	.products-area {
+	.content {
 		width: 100%;
 	}
-	.aside {
+	.side-bar {
 		width: 100%;
 	}
 	.ad-box {
-		width: 24%;
+		width: 65%;
 		display: inline-block;
 	}
+	.footer-block {
+		width: 100%;
+		min-height: 100px;
+	}
+  .delivery-row {
+    text-align: center;
+  }
+  .delivery-row .btn {
+    text-align: center;
+  }
+  .mobile-nav {
+    margin: 65px 0 0;
+  }
+  .main-nav-menu {
+    padding: 0;
+  }
+  .top-nav li {
+    line-height: 0.7;
+  }
+
 }
