--- a/css/style.css
+++ b/css/style.css
@@ -547,6 +547,7 @@ padding: 0;
 	color: #39a0b9;
 	min-width: 50px;
 	min-height: 50px;
+  line-height: 50px;
 	background: #fff;
 	border-radius: 25px;
 }
